// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrawContainer /> should render a basic prebuilt DrawContainer component 1`] = `
"[36m<div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxhCb gdoKRR\\"[39m
    [33mid[39m=[32m\\"_ol_kit_map_test_id\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxjAm ehgTyw\\"[39m
    [36m>[39m
      [36m<p[39m
        [33mclass[39m=[32m\\"sc-AxiKw cXKhWR\\"[39m
      [36m>[39m
        [0mPowered by ol-kit[0m
      [36m</p>[39m
      [36m<a[39m
        [33mclass[39m=[32m\\"sc-AxirZ flfhYH\\"[39m
        [33mhref[39m=[32m\\"https://ol-kit.com/\\"[39m
        [33mtarget[39m=[32m\\"_blank\\"[39m
        [33mtitle[39m=[32m\\"Powered by ol-kit v0.19.2\\"[39m
      [36m>[39m
        [36m<svg[39m
          [33mviewBox[39m=[32m\\"0 0 204.76 236.44\\"[39m
          [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<style>[39m
              [0m.cls-1[0m
              [0m{[0m
              [0mfill:#231f20[0m
              [0m}[0m
            [36m</style>[39m
          [36m</defs>[39m
          [36m<g[39m
            [33mid[39m=[32m\\"Layer_2\\"[39m
          [36m>[39m
            [36m<path[39m
              [33mclass[39m=[32m\\"cls-1\\"[39m
              [33md[39m=[32m\\"M102.38 0L0 59.11v118.22l102.38 59.11 102.38-59.11V59.11zM106 15.64l87 50.26v102L80.49 104.09zM18 62.27l74.66-43.1-33.95 118L18 62.27zM43.8 189l-32-18.51V75.37l42.35 77.86zm10.49 6.06l7.82-27.17 25.12 46.19zm50.38 26.44l-37.93-69.67 10.4-36.13 106.4 60.3z\\"[39m
              [33mid[39m=[32m\\"logo_examples\\"[39m
            [36m/>[39m
          [36m</g>[39m
        [36m</svg>[39m
      [36m</a>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"ol-viewport\\"[39m
      [33mdata-view[39m=[32m\\"2\\"[39m
      [33mstyle[39m=[32m\\"position: relative; overflow: hidden; width: 100%; height: 100%;\\"[39m
    [36m>[39m
      [36m<canvas[39m
        [33mclass[39m=[32m\\"ol-unselectable\\"[39m
        [33mstyle[39m=[32m\\"width: 100%; height: 100%; display: none;\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer-stopevent\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxhUy btKFFM\\"[39m
  [36m>[39m
    [36m<div>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-Axmtr fQsofh\\"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m\\"sc-AxmLO BHmcv\\"[39m
          [33mid[39m=[32m\\"_POINT_LABELS_ENABLED\\"[39m
        [36m>[39m
          [36m<label[39m
            [33mclass[39m=[32m\\"sc-fzozJi earDLA\\"[39m
            [33mfor[39m=[32m\\"_POINT_LABELS_ENABLED\\"[39m
          [36m>[39m
            [0mCoordinate Labels[0m
          [36m</label>[39m
          [36m<span[39m
            [33mclass[39m=[32m\\"MuiSwitch-root\\"[39m
          [36m>[39m
            [36m<span[39m
              [33maria-disabled[39m=[32m\\"false\\"[39m
              [33mclass[39m=[32m\\"MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-16 MuiSwitch-switchBase WithStyles(ForwardRef(Switch))-switchBase-1 MuiSwitch-colorPrimary\\"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m\\"MuiIconButton-label\\"[39m
              [36m>[39m
                [36m<input[39m
                  [33mclass[39m=[32m\\"PrivateSwitchBase-input-19 MuiSwitch-input\\"[39m
                  [33mtype[39m=[32m\\"checkbox\\"[39m
                  [33mvalue[39m=[32m\\"false\\"[39m
                [36m/>[39m
                [36m<span[39m
                  [33mclass[39m=[32m\\"MuiSwitch-thumb\\"[39m
                [36m/>[39m
              [36m</span>[39m
              [36m<span[39m
                [33mclass[39m=[32m\\"MuiTouchRipple-root\\"[39m
              [36m/>[39m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m\\"MuiSwitch-track WithStyles(ForwardRef(Switch))-track-3\\"[39m
            [36m/>[39m
          [36m</span>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"MuiContainer-root WithStyles(ForwardRef(Container))-root-32 MuiContainer-maxWidthLg\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"MuiContainer-root WithStyles(ForwardRef(Container))-root-41 MuiContainer-maxWidthLg\\"[39m
      [36m>[39m
        [36m<div[39m
          [33mstyle[39m=[32m\\"width: 100%;\\"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m\\"sc-Axmtr fQsofh\\"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m\\"sc-AxmLO BHmcv\\"[39m
              [33mid[39m=[32m\\"_DISTANCE_LABEL_ENABLED\\"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m\\"MuiSwitch-root\\"[39m
              [36m>[39m
                [36m<span[39m
                  [33maria-disabled[39m=[32m\\"false\\"[39m
                  [33mclass[39m=[32m\\"MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-16 MuiSwitch-switchBase WithStyles(ForwardRef(Switch))-switchBase-1 MuiSwitch-colorPrimary\\"[39m
                [36m>[39m
                  [36m<span[39m
                    [33mclass[39m=[32m\\"MuiIconButton-label\\"[39m
                  [36m>[39m
                    [36m<input[39m
                      [33mclass[39m=[32m\\"PrivateSwitchBase-input-19 MuiSwitch-input\\"[39m
                      [33mdata-testid[39m=[32m\\"geokit-MeasureLabelPreference-uomToggle\\"[39m
                      [33mtype[39m=[32m\\"checkbox\\"[39m
                      [33mvalue[39m=[32m\\"false\\"[39m
                    [36m/>[39m
                    [36m<span[39m
                      [33mclass[39m=[32m\\"MuiSwitch-thumb\\"[39m
                    [36m/>[39m
                  [36m</span>[39m
                  [36m<span[39m
                    [33mclass[39m=[32m\\"MuiTouchRipple-root\\"[39m
                  [36m/>[39m
                [36m</span>[39m
                [36m<span[39m
                  [33mclass[39m=[32m\\"MuiSwitch-track WithStyles(ForwardRef(Switch))-track-3\\"[39m
                [36m/>[39m
              [36m</span>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m\\"sc-fzoLsD kvQjNO\\"[39m
            [36m>[39m
              [36m<span>[39m
                [0mDistance: [0m
                [0m [0m
                [0m[0m
              [36m</span>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m\\"MuiInputBase-root MuiInput-root MuiInput-underline\\"[39m
              [33mdata-testid[39m=[32m\\"geokit-MeasureLabelPreference-uomOptions\\"[39m
            [36m>[39m
              [36m<div[39m
                [33maria-haspopup[39m=[32m\\"listbox\\"[39m
                [..."
`;

exports[`<DrawContainer /> should render a single child 1`] = `
"[36m<div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxhCb gdoKRR\\"[39m
    [33mid[39m=[32m\\"_ol_kit_map_test_id\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxjAm ehgTyw\\"[39m
    [36m>[39m
      [36m<p[39m
        [33mclass[39m=[32m\\"sc-AxiKw cXKhWR\\"[39m
      [36m>[39m
        [0mPowered by ol-kit[0m
      [36m</p>[39m
      [36m<a[39m
        [33mclass[39m=[32m\\"sc-AxirZ flfhYH\\"[39m
        [33mhref[39m=[32m\\"https://ol-kit.com/\\"[39m
        [33mtarget[39m=[32m\\"_blank\\"[39m
        [33mtitle[39m=[32m\\"Powered by ol-kit v0.18.0\\"[39m
      [36m>[39m
        [36m<svg[39m
          [33mviewBox[39m=[32m\\"0 0 204.76 236.44\\"[39m
          [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<style>[39m
              [0m.cls-1[0m
              [0m{[0m
              [0mfill:#231f20[0m
              [0m}[0m
            [36m</style>[39m
          [36m</defs>[39m
          [36m<g[39m
            [33mid[39m=[32m\\"Layer_2\\"[39m
          [36m>[39m
            [36m<path[39m
              [33mclass[39m=[32m\\"cls-1\\"[39m
              [33md[39m=[32m\\"M102.38 0L0 59.11v118.22l102.38 59.11 102.38-59.11V59.11zM106 15.64l87 50.26v102L80.49 104.09zM18 62.27l74.66-43.1-33.95 118L18 62.27zM43.8 189l-32-18.51V75.37l42.35 77.86zm10.49 6.06l7.82-27.17 25.12 46.19zm50.38 26.44l-37.93-69.67 10.4-36.13 106.4 60.3z\\"[39m
              [33mid[39m=[32m\\"logo_examples\\"[39m
            [36m/>[39m
          [36m</g>[39m
        [36m</svg>[39m
      [36m</a>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"ol-viewport\\"[39m
      [33mdata-view[39m=[32m\\"24\\"[39m
      [33mstyle[39m=[32m\\"position: relative; overflow: hidden; width: 100%; height: 100%;\\"[39m
    [36m>[39m
      [36m<canvas[39m
        [33mclass[39m=[32m\\"ol-unselectable\\"[39m
        [33mstyle[39m=[32m\\"width: 100%; height: 100%; display: none;\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer-stopevent\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxhUy btKFFM\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"child comp\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
  [36m</div>[39m
[36m</div>[39m"
`;

exports[`<DrawContainer /> should render an array of children 1`] = `
"[36m<div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxhCb gdoKRR\\"[39m
    [33mid[39m=[32m\\"_ol_kit_map_test_id\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-AxjAm ehgTyw\\"[39m
    [36m>[39m
      [36m<p[39m
        [33mclass[39m=[32m\\"sc-AxiKw cXKhWR\\"[39m
      [36m>[39m
        [0mPowered by ol-kit[0m
      [36m</p>[39m
      [36m<a[39m
        [33mclass[39m=[32m\\"sc-AxirZ flfhYH\\"[39m
        [33mhref[39m=[32m\\"https://ol-kit.com/\\"[39m
        [33mtarget[39m=[32m\\"_blank\\"[39m
        [33mtitle[39m=[32m\\"Powered by ol-kit v0.18.0\\"[39m
      [36m>[39m
        [36m<svg[39m
          [33mviewBox[39m=[32m\\"0 0 204.76 236.44\\"[39m
          [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<style>[39m
              [0m.cls-1[0m
              [0m{[0m
              [0mfill:#231f20[0m
              [0m}[0m
            [36m</style>[39m
          [36m</defs>[39m
          [36m<g[39m
            [33mid[39m=[32m\\"Layer_2\\"[39m
          [36m>[39m
            [36m<path[39m
              [33mclass[39m=[32m\\"cls-1\\"[39m
              [33md[39m=[32m\\"M102.38 0L0 59.11v118.22l102.38 59.11 102.38-59.11V59.11zM106 15.64l87 50.26v102L80.49 104.09zM18 62.27l74.66-43.1-33.95 118L18 62.27zM43.8 189l-32-18.51V75.37l42.35 77.86zm10.49 6.06l7.82-27.17 25.12 46.19zm50.38 26.44l-37.93-69.67 10.4-36.13 106.4 60.3z\\"[39m
              [33mid[39m=[32m\\"logo_examples\\"[39m
            [36m/>[39m
          [36m</g>[39m
        [36m</svg>[39m
      [36m</a>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"ol-viewport\\"[39m
      [33mdata-view[39m=[32m\\"46\\"[39m
      [33mstyle[39m=[32m\\"position: relative; overflow: hidden; width: 100%; height: 100%;\\"[39m
    [36m>[39m
      [36m<canvas[39m
        [33mclass[39m=[32m\\"ol-unselectable\\"[39m
        [33mstyle[39m=[32m\\"width: 100%; height: 100%; display: none;\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer\\"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ol-overlaycontainer-stopevent\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<div[39m
    [33mclass[39m=[32m\\"sc-AxhUy btKFFM\\"[39m
  [36m>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"1\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"2\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
    [36m<div[39m
      [33mid[39m=[32m\\"3\\"[39m
    [36m>[39m
      [0mchild comp[0m
    [36m</div>[39m
  [36m</div>[39m
[36m</div>[39m"
`;
